Update to be mine

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&amp;subset=devanagari,latin-ext" rel="stylesheet">
         
         <!-- title of site -->
-        <title>Browny</title>
+        <title>Zahra Kouroshzadeh</title>
 
         <!-- For favicon png -->
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
@@ -103,9 +103,9 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<div class="header-text">
-							<h2>hi <span>,</span> i am <br> browny <br> star <span>.</span>   </h2>
-							<p>ui/ux designer and web developer</p>
-							<a href="assets/download/browney.txt" download>download resume</a>
+							<h2>hi <span>,</span> i am <br> zahra <br> kouroshzadeh <span>.</span>   </h2>
+							<p>computer engineer, C/C++ developer</p>
+							<a href="assets/download/zahra.txt" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
 				</div><!-- /.row-->
@@ -125,22 +125,22 @@
 						<div class="col-sm-6">
 							<div class="single-about-txt">
 								<h3>
-									I am a Professional UI/UX Designer and Web developer. Consectetur an adipisi elita, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud.
-								</h3>
+									I am a C/C++ and Web developer and Machine Learning researcher.Maintain and develop C/C++ inter-banking switch applications.
+
 								<p>
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspi unde omnis iste natus error sit voluptatem accusantium doloremque lauda ntium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam vo luptatem quia voluptas sit aspernatur aut odit aut fugit,
+									My masters thesis titled: A Multiplex Visibility Graph With Complex Network Features in the Detection of Epilepsy.  EEG signal has a nonlinear and non-stable nature. Due to the dynamic nature of the network, its time-series mapping to a complex network is considered a suitable approach. A multiplex visibility graph has been built to classify  seizure with interictal, preictal and postictal using Bonn university's epilepsy data. we reached the average accuracy of 100\%. Python libraries have been used
 								</p>
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>phone</h3>
-											<p>987-123-6547</p>
+											<p>+98-9372356063</p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
 											<h3>email</h3>
-											<p>browny@info.com</p>
+											<p>z.kouroshzade@gmail.com</p>
 										</div>
 									</div>
 									<div class="col-sm-4">
