--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li><!--/li-->
 										<li><a href="#"><i class="fa fa-dribbble"></i></a></li><!--/li-->
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li><!--/li-->
-										<li><a href="#"><i class="fa fa-linkedin"></i></a></li><!--/li-->
+										<li><a href="#"><i class="fa fa-linkedin"></i>https://www.linkedin.com/in/zahra-kouroshzadeh/</a></li><!--/li-->
 										<li><a href="#"><i class="fa fa-instagram"></i></a></li><!--/li-->
 									</ul><!--/ul-->
 								</div><!--/.hm-foot-icon-->
@@ -914,7 +914,7 @@
 			<div class="container">
 				<div class="hm-footer-copyright text-center">
 					<p>
-						&copy; copyright yourname. design and developed by <a href="https://www.themesine.com/">themesine</a>
+						&copy; copyright zahra kouroshzadeh. design and developed by <a href="https://www.themesine.com/">themesine</a>
 					</p><!--/p-->
 				</div><!--/.text-center-->
 			</div><!--/.container-->
