--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 						<div class="col-sm-4">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2008 - 2010</h2>
+									<h2>2019 - 2022</h2>
 									<h3>master <span>of </span> computer science</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
@@ -219,9 +219,9 @@
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-											university of north carolina
+											Isfahan University of Technology
 										</h4>
-										<h5>north carolina, USA</h5>
+										<h5>Esfahan, Iran</h5>
 										<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>
