--- a/index.html
+++ b/index.html
@@ -143,12 +143,6 @@
 											<p>z.kouroshzade@gmail.com</p>
 										</div>
 									</div>
-									<div class="col-sm-4">
-										<div class="single-about-add-info">
-											<h3>website</h3>
-											<p>www.brownsine.com</p>
-										</div>
-									</div>
 								</div>
 							</div>
 						</div>
@@ -210,7 +204,7 @@
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2019 - 2022</h2>
-									<h3>master <span>of </span> computer science</h3>
+									<h3>master <span>of </span> computer science computer science (Software Engineering)</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -223,8 +217,7 @@
 										</h4>
 										<h5>Esfahan, Iran</h5>
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
-										</p>
+											Thesis: A Multiplex Visibility Graph With Complex Network Features in the Detection of Epilepsy. EEG signal has a nonlinear and non-stable nature. Due to the dynamic nature of the network, its time-series mapping to a complex network is considered a suitable approach. A multiplex visibility graph has been built to classify  seizure with interictal, preictal and postictal using Bonn university's epilepsy data. e reached the average accuracy of 100%. Python libraries have been used. Supervisor: Prof.Nasser Ghadiri										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
 							</div>
@@ -233,7 +226,7 @@
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2015 - 2019</h2>
-									<h3>bachelor <span>of </span> Computer Engineering (Information Technology)</h3>
+									<h3>bachelor <span>of </span> computer science (Information Technology)</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -246,8 +239,7 @@
 										</h4>
 										<h5>Tehran, Iran</h5>
 										<p class="description">
-											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
-										</p>
+											Thesis: Design and implement Laboratory management system for computer department; A three-level accessibility laboratory management system has been designed and implemented. In this system, each super layer could define lower layers, and each person could have different access to equipment information in every laboratory. It has been done with J2EE. Supervisor: Prof.Nooshin Riahi										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
 							</div>
