--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2019 - 2022</h2>
-									<h3>master <span>of </span> computer science computer science (Software Engineering)</h3>
+									<h3>master <span>of </span> computer science (Software Engineering)</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
