--- a/index.html
+++ b/index.html
@@ -128,8 +128,13 @@
 									I am a C/C++ and Web developer and Machine Learning researcher.Maintain and develop C/C++ inter-banking switch applications.
 
 								<p>
-									My masters thesis titled: A Multiplex Visibility Graph With Complex Network Features in the Detection of Epilepsy.  EEG signal has a nonlinear and non-stable nature. Due to the dynamic nature of the network, its time-series mapping to a complex network is considered a suitable approach. A multiplex visibility graph has been built to classify  seizure with interictal, preictal and postictal using Bonn university's epilepsy data. we reached the average accuracy of 100\%. Python libraries have been used
-								</p>
+My journey began in 2015 after finishing high school, when I discovered my passion for programming. I started with classes on building websites using HTML, CSS, and JavaScript. Three monthes later, I was accepted as a Computer Science student at Alzahra University, where I dived deeper into programming. During my first semester, I learned to write algorithms and worked with C, and by the second semester, I was introduced to Java, which became a turning point for me.
+
+I participated in a competition at the end of my second semester and was accepted into exclusive summer classes for computer students. These classes prepared me for ACM exams and competitions, where I honed my problem-solving skills. By the third semester, I was advancing in Java programming, mastering Java Core and Java SE, and later diving into Java Enterprise through advanced classes.
+
+Java became my favorite programming language and my envisioned career path. But I didn’t stop there, I taught myself C++ to overcome a gap I noticed when comparing myself to non-computer students. That self-driven learning experience was transformative for me.
+
+After completing my Bachelor's degree, I pursued a Master’s program, where I learned R and Python. This phase of my journey was particularly special, as it allowed me to explore one of my dreams: understanding how the brain works. I worked on EEG signal analysis for my thesis, diving into data and signal analysis. It was an incredible experience that deepened my passion for merging technology with research.								</p>
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="single-about-add-info">
