--- a/index.html
+++ b/index.html
@@ -191,6 +191,14 @@ After completing my Bachelor's degree, I pursued a Master’s program, where I l
 							</div>
 
 						</div>
+						<div class="col-sm-offset-1 col-sm-5">
+							<div class="single-about-txt">
+								<p>
+During my Master’s program, I also taught workshop classes for engineering students over three semesters, sharing what I had learned through my own experiences. This teaching role was deeply fulfilling and helped solidify my expertise. After graduating, I entered my first internship, which focused on C, C++, and Python. That was my first step into the professional world, and it laid a strong foundation for my career.
+
+Now, I work in financial systems, maintaining and developing interbanking switches, where I continue to expand my skills and make meaningful contributions								</p>
+								</div>
+							</div
 					</div>
 				</div>
 			</div>
