--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					<div class="col-md-12 text-center">
 						<div class="header-text">
 							<h2>hi <span>,</span> i am <br> zahra <br> kouroshzadeh <span>.</span>   </h2>
-							<p>computer engineer, C/C++ developer</p>
+							<p>computer engineer, software developer</p>
 							<a href="assets/download/zahra.txt" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
