change about me

--- a/index.html
+++ b/index.html
@@ -450,26 +450,28 @@
 				<div class="container">
 					<div class="about-content">
 						<div class="row">
-							<div class="col-sm-6">
+							<div class="col-sm-12">
 								<div class="single-about-txt">
 									<p>
-	My journey began in 2015 after finishing high school, when I discovered my passion for programming. I started with classes on building websites using HTML, CSS, and JavaScript. Three monthes later, I was accepted as a Computer Science student at Alzahra University, where I dived deeper into programming. During my first semester, I learned to write algorithms and worked with C, and by the second semester, I was introduced to Java, which became a turning point for me.
-	
-	I participated in a competition at the end of my second semester and was accepted into exclusive summer classes for computer students. These classes prepared me for ACM exams and competitions, where I honed my problem-solving skills. By the third semester, I was advancing in Java programming, mastering Java Core and Java SE, and later diving into Java Enterprise through advanced classes.
-	
-	Java became my favorite programming language and my envisioned career path. But I didn’t stop there, I taught myself C++ to overcome a gap I noticed when comparing myself to non-computer students.
+	I’m a software developer with a strong foundation in computer science and a passion for building efficient, scalable systems. My journey began with web development using HTML, CSS, and JavaScript, and evolved into developing strong proficiency in languages such as Java, Python, and C++.
+
+Over time, my curiosity led me to explore diverse areas of technology — from algorithm design and data analysis to signal processing and enterprise software development. I’ve also taught programming workshops, which strengthened both my technical expertise and my communication skills.
+
+Recently, I’ve become deeply interested in the intersection of artificial intelligence and healthcare, exploring how computational models can help us better understand the human brain. I’m currently reading Computational Cognitive Neuroscience by Randall C. O’Reilly, which has inspired me to further study how AI can support research and innovation in cognitive science and medical technology.
+
+Currently, I work in the financial technology sector, developing and maintaining interbanking systems. I’m passionate about continuous learning, tackling complex problems, and bridging software engineering with intelligent, data-driven solutions.
 	</p>
 								</div>
 							</div>
-							<div class="col-sm-6">
-								<div class="single-about-txt">
+							<!--<div class="col-sm-6">
+							--	<div class="single-about-txt">
 									<p>
 									That self-driven learning experience was transformative for me. After completing my Bachelor's degree, I pursued a Master’s program, where I learned R and Python. This phase of my journey was particularly special, as it allowed me to explore one of my dreams: understanding how the brain works. I worked on EEG signal analysis for my thesis, diving into data and signal analysis. It was an incredible experience that deepened my passion for merging technology with research. During my Master’s program, I also taught workshop classes for engineering students over three semesters, sharing what I had learned through my own experiences. This teaching role was deeply fulfilling and helped solidify my expertise. After graduating, I entered my first internship, which focused on C, C++, and Python. That was my first step into the professional world, and it laid a strong foundation for my career.
 	
 	Now, I work in financial systems, maintaining and developing interbanking switches, where I continue to expand my skills in different fields and make meaningful contributions.								</p>
 									</div>
 								<div class="row">
-									</div>
+									</div>-->
 							</div>
 						</div>
 					</div>
@@ -621,3 +623,4 @@
     </body>
 	
 </html>
+
