master thesis updated

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 										</h4>
 										<h5>Esfahan, Iran</h5>
 										<p class="description">
-											Thesis: A Multiplex Visibility Graph With Complex Network Features in the Detection of Epilepsy. EEG signal has a nonlinear and non-stable nature. Due to the dynamic nature of the network, its time-series mapping to a complex network is considered a suitable approach. A multiplex visibility graph has been built to classify  seizure with interictal, preictal and postictal using Bonn university's epilepsy data. e reached the average accuracy of 100%. Python libraries have been used. Supervisor: Prof.Nasser Ghadiri										</p>
+											Thesis: A Multiplex Visibility Graph With Complex Network Features in the Detection of Epilepsy. EEG signal has a nonlinear and non-stable nature. Due to the dynamic nature of the network, its time-series mapping to a complex network is considered a suitable approach. A multiplex visibility graph has been built to classify  seizure with interictal, preictal and postictal using Bonn university's epilepsy data. Python libraries have been used. Supervisor: Prof.Nasser Ghadiri										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
 							</div>
@@ -623,4 +623,5 @@ Currently, I work in the financial technology sector, developing and maintaining
     </body>
 	
 </html>
+
 
